## Process this file with automake to produce Makefile.in

SUBDIRS                 = src

lib_LTLIBRARIES         = libaac_dec.la

libaac_dec_la_SOURCES   = 
libaac_dec_la_LDFLAGS   = -no-undefined
libaac_dec_la_LIBADD    = src/libsrc.la

libaac_dec_la_include_HEADERS = inc/TIDspOmx.h inc/aacdecsocket_ti.h inc/omx_audiodec_aacutils.h
libaac_dec_la_includedir = $(includedir)/omx/audio_decode

