## Process this file with automake to produce Makefile.in

SUBDIRS                 = src

lib_LTLIBRARIES         = libbase.la

libbase_la_SOURCES      = 
libbase_la_LDFLAGS      = -no-undefined
libbase_la_LIBADD       = src/libsrc.la

libbase_la_include_HEADERS = inc/decode_common_ti.h inc/omx_audiodecutils.h
libbase_la_includedir   = $(includedir)/omx/audio_decode

