## Process this file with automake to produce Makefile.in

SUBDIRS                 = src

lib_LTLIBRARIES         = libmp3_dec.la

libmp3_dec_la_SOURCES   = 
libmp3_dec_la_LDFLAGS   = -no-undefined
libmp3_dec_la_LIBADD    = src/libsrc.la

libmp3_dec_la_include_HEADERS = inc/mp3decsocket_ti.h inc/omx_audiodec_mp3utils.h
libmp3_dec_la_includedir = $(includedir)/omx/audio_decode

