## Process this file with automake to produce Makefile.in

SUBDIRS                 = src

noinst_LTLIBRARIES      = libaac_enc.la

libaac_enc_la_SOURCES   = 
libaac_enc_la_LDFLAGS   = -no-undefined
libaac_enc_la_LIBADD    = src/libsrc.la

libaac_enc_la_include_HEADERS = inc/TIDspOmx.h inc/aacencsocket_ti.h inc/omx_audioenc_aacutils.h
libaac_enc_la_includedir = $(includedir)/omx/audio_encode

