## Process this file with automake to produce Makefile.in

SUBDIRS                 = src

noinst_LTLIBRARIES      = libbase.la

libbase_la_SOURCES      = 
libbase_la_LDFLAGS      = -no-undefined
libbase_la_LIBADD       = src/libsrc.la

libbase_la_include_HEADERS = inc/encode_common_ti.h inc/omx_audioencoderutils.h inc/TIDspOmx.h
libbase_la_includedir   = $(includedir)/omx/audio_encode

